<resources>
    <string name="app_name">The Self Promo App</string>
    <string name="contact_name">Contact Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="my_display_name">My Display Name</string>
    <string name="include_junior">Include \'Junior\'</string>
    <string name="immediate_start">Immediate Start</string>
    <string name="avalaible_from_date">Avalaible from date</string>
    <string name="preview_message">PREVIEW MESSAGE</string>
    <string name="send_message">SEND MESSAGE</string>

</resources>