<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="40dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_contact_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edit_text_input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Andra TI" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_contact_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/contact_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edit_text_input_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                tools:text="62 86213131" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_display_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/my_display_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edit_text_input_display_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Andra Kulan" />

        </com.google.android.material.textfield.TextInputLayout>


        <CheckBox
            android:id="@+id/check_box_junior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/include_junior" />

        <Spinner
            android:id="@+id/spinner_job_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:listitem="@android:layout/simple_list_item_1" />

        <CheckBox
            android:id="@+id/check_immediate_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/immediate_start" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/avalaible_from_date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edit_text_input_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                tools:text="22/12/2023" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/button_preview_message"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/preview_message" />


    </LinearLayout>

</ScrollView>